// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/sinta-p/tracker-app/grpc";

package grpc;

// The backend TickerManager definition.
service TickerManager {
  // get a ticker information
  rpc SelectTicker (TickerRequest) returns (StockInfo) {}
  rpc InsertTicker (StockInfo) returns (Status) {}
  rpc DeleteTicker (TickerRequest) returns (Status) {}
}

service TickerManager2 {
  // get a ticker information
  rpc SelectTicker2 (TickerRequest) returns (StockInfo) {}
  rpc InsertTicker (StockInfo) returns (Status) {}
  rpc DeleteTicker (TickerRequest) returns (Status) {}
}

service TickerManager3 {
  // get a ticker information
  rpc SelectTicker3 (TickerRequest) returns (StockInfo) {}
  rpc InsertTicker (StockInfo) returns (Status) {}
  rpc DeleteTicker (TickerRequest) returns (Status) {}
}

// The request message containing the ticker.
message TickerRequest {
  string ticker = 1;
}

// The response message containing the stock information
message StockInfo {
  string ticker = 1;
  string company = 2;
  string description = 3;
}

// The response message containing the status of request 
message Status {
  bool success = 1;
}